--- a/action.yaml
+++ b/action.yaml
@@ -23,9 +23,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
-    - run: mkdir data && bash run.sh ${{ inputs.scan-action }} ${{ inputs.image-ref }} -o /data/${{ inputs.output }} -e ${{ inputs.exit-code }}
+    - run: bash run.sh ${{ inputs.scan-action }} ${{ inputs.image-ref }} -o ${{ inputs.output }} -e ${{ inputs.exit-code }}
       shell: bash
     - uses: actions/upload-artifact@v2
       with:
         name: ${{ inputs.output }}
-        path: data/${{ inputs.output }}
+        path: ${{ inputs.output }}
