fix: adapt tools 2.0 cli

--- a/action.yaml
+++ b/action.yaml
@@ -8,7 +8,7 @@ inputs:
   scan-action:
     description: 'Scan action for scanning security issues'
     required: true
-    default: 'scan-host'
+    default: 'scan image'
   image-ref:
     description: 'image reference'
     required: true
