--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -8,7 +8,7 @@ jobs:
       - uses: actions/checkout@v3
       - uses: chaitin/veinmind-action@main
         with:
-          scan-action: scan-host
+          scan-action: scan image
           image-ref: ubuntu:20.04
   test2:
     runs-on: ubuntu-latest
@@ -18,6 +18,6 @@ jobs:
       - run: docker build -t weakpass:latest -f test/Dockerfile .
       - uses: chaitin/veinmind-action@main
         with:
-          scan-action: scan-host
+          scan-action: scan image
           image-ref: weakpass:latest
           exit-code: 1
